--- a/ios/rutasApp/Info.plist
+++ b/ios/rutasApp/Info.plist
@@ -35,8 +35,14 @@
 			</dict>
 		</dict>
 	</dict>
+	
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>To show the map, we need to know your location</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>To show the map, we need to know your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+  <string>To show the map, we need to know your location</string>
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
