--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "0.28.0",
     "react-native-permissions": "^3.0.5",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.6.0",
